# face-attributes-bentoml

./: .gitignore  Makefile  pyproject.toml
src/serve/: bentofile.yaml  config.py  configuration.yaml  deployment_config.yaml  save_model.py  service.py
src/train/: config.py  datasets.py  main.py  model.py  utils.py
