[tool.poetry]
name = "celeba"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.5.3"
pytorch-lightning = "^2.0.0"
scikit-learn = "^1.2.2"
bentoml = "^1.0.16"
bentoctl = "^0.3.4"
torch = "1.13.1"
torchvision = "0.14.1"
boto = "^2.49.0"
boto3 = "^1.26.99"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
